testsuite/poke.pkl/format-diag-5.pk
/* { dg-do compile } */

format ("AB%f32oCD", 1U); /* { dg-error "" } */
